# Fabric-CICD

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.deploy/: deploy_fabric_workspace.py
.github/workflows/: fabric-cicd.yml  pr-checks.yml  rollback.yml
.pipelines/: deploy_workspace_prod.yml  deploy_workspace_template.yml  deploy_workspace_uat.yml
configs/: enterprise-policy.yaml
configs/environments/: dev.yaml  prod.yaml  test.yaml
docs/: enterprise-branching-and-promotion.md
fabric_cicd/: __init__.py  cli.py  commands.py  config.py  deployment.py  fabric_api.py  models.py
scripts/: export_dev.ps1  promote_dev_to_test.ps1
tests/: test_policy_checks.py
workspace/engineering/project_one/: parameter.yml
