[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric-cicd"
version = "0.1.0"
description = "Code-first CI/CD starter for Microsoft Fabric artifacts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0.1",
  "requests>=2.32.3"
]

[project.scripts]
fabric-cicd = "fabric_cicd.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["fabric_cicd*"]
